# docs/swagger.json
@@ -56,6 +56,18 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "Filter by start date (RFC3339)",
+                        "name": "start_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by end date (RFC3339)",
+                        "name": "end_date",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "description": "Limit",
                         "name": "limit",
@@ -221,6 +233,7 @@
             "properties": {
                 "notifications": {
                     "type": "array",
+                    "maxItems": 1000,
                     "items": {
                         "$ref": "#/definitions/handler.CreateRequest"
                     }
